--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Clear Sight Initiative</title>
 
     <!--Css linking-->
-    <link rel="stylesheet" href="CSI.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
