--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <!-- Mission Highlight 1 -->
         <div class="mission-item">
             <!-- Icon representing impact -->
-            <img src="Images/Icons/heart.png" alt="Heart Icon">
+            <img src="Images/Icons/Heart.png" alt="Heart Icon">
             <div>
                 <h3>Make An Impact</h3>
                 <p>Help restore vision and transform lives in communities across Nigeria.</p>
