--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <!-- Service Card 2: Consultation -->
         <div class="service-card">
-            <img src="Images/Icons/heart-rate.png" alt="Consultation" class="icon"> <!-- Icon for consultation -->
+            <img src="Images/Icons/Heart-rate.png" alt="Consultation" class="icon"> <!-- Icon for consultation -->
             <h3>Consultation</h3> <!-- Subheading for the service -->
             <p>
                 <!-- Description of the consultation service -->
